# rust_ecs_benchmark

./: .gitignore  Cargo.toml  README.md
benches/: ecs_bench.rs
